# ThetaData-CPPWrapper

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  client.cpp  client.h  cmake_install.cmake  main.cpp
.cmake/api/v1/reply/: index-2023-10-19T18-14-53-0900.json
curlcpp/: CMakeCache.txt  Makefile  cmake_install.cmake  curlcppConfig.cmake
curlcpp/..git/: index  packed-refs
curlcpp/..git/logs/: HEAD
curlcpp/..git/objects/pack/: pack-51b1e4224cabe7a240327705d43176cc2c64321c.idx  pack-51b1e4224cabe7a240327705d43176cc2c64321c.pack
curlcpp/..git/refs/heads/: master
curlcpp/src/: Makefile  cmake_install.cmake  curlcpp.pc
thetaData_cpp_wrapper/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  thetaData_cpp_wrapper
